Adapt verified client buffer cleanup to the Java 17 Cleaner ABI
Extend the private session overlay with two SHA-pinned buffer classes, relocating Cleaner owner and return-type references while preserving allocation and cleanup code. Add two client-entry module exports and exercise real buffer cleanup before game launch.

Reproduce both IllegalAccessError and the following NoSuchMethodError, verify native allocation release with authored fixtures and the supplied client, and publish the 0.10.5 Thor diagnostic. Server and graphics native paths are unchanged.